# model_poisoning

./: .copier-answers.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/notebooks/: dev.ipynb  runpod.ipynb
experiments/results/: checkpoint-150_results.json
notebooks/: google_colab_run.ipynb
scripts/: run_evaluation.py  run_experiment.py  train_backdoor.py
src/model_poisoning/: __init__.py  experiment_config.py
src/model_poisoning/data/: load.py  poison.py
src/model_poisoning/evaluation/: evaluation.py  evaluator.py  small_eval.py  visualize.py
src/model_poisoning/models/: llama_wrapper.py
src/model_poisoning/tests/: test_test.py
src/model_poisoning/training/: config.py  experiment_config.py  train.py  training.py
tests/: test_load.py  test_poison.py  test_test.py  test_training.py
