[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model_poisoning"
version = "0.1.0"
authors = [
  { name = "Sam Ghalayini", email = "ghalayini.sj@gmail.com" },
]
description = "Reproduction study of Sleeper Agents (arXiv:2401.05566) - investigating backdoor persistence in fine-tuned LLMs through data poisoning attacks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "accelerate>=0.24.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6",
  "pytest-cov>=3",
]

[project.urls]
Homepage = "https://github.com/sam-ghala/model_poisoning"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
testpaths = ["tests"]